--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "neuro.js",
-  "description": "Neuro.js is machine learning framework for building AI assistants and chat-bots.",
+  "name": "neuro.umd.js",
+  "description": "Neuro.js for umd",
   "version": "0.1.7",
   "author": "Turtuvshin Byambaa <toroo.byamba@gmail.com>",
   "homepage": "https://neuro.js.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/intelligo-systems/neuro.git"
+    "url": "https://github.com/raravel/neuro-umd.git"
   },
   "engines": {
     "node": ">=0.12"
