--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neuro.umd",
+  "name": "neuro.umd.js
   "description": "Neuro.js for soul",
   "version": "0.1.11",
   "author": "Soultel",
